# Serverless-Functions

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
api/: Hi.py  Home.py
serverless/: Hi.py  Home.py
tests/: test_serverless.py
